--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PORT=8080
 
-DB_NAME="notes-api"
-MONGODB_URI="mongodb+srv://admin:admin@notes-api.ezzrd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+DB_NAME="GiveNTake"
+MONGODB_URI="mongodb+srv://admin:admin@giventake.23grl.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+
+
+
 
 JWT_KEY="jwtsecretkey"
